--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: vdr@packages.debian.org\n"
-"POT-Creation-Date: 2009-04-02 14:42+0200\n"
+"POT-Creation-Date: 2010-03-04 22:58+0100\n"
 "PO-Revision-Date: 2004-09-27 16:00+0200\n"
 "Last-Translator: Jens Nachtigall <nachtigall@web.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -28,8 +28,20 @@ msgstr ""
 #. Type: select
 #. Choices
 #: ../vdr.templates:1001
-msgid "Satellite, Terrestrial, Cable"
-msgstr "Satellit, Terrestrisch, Kabel"
+msgid "Satellite"
+msgstr "Satellit"
+
+#. Type: select
+#. Choices
+#: ../vdr.templates:1001
+msgid "Terrestrial"
+msgstr "Terrestrisch"
+
+#. Type: select
+#. Choices
+#: ../vdr.templates:1001
+msgid "Cable"
+msgstr "Kabel"
 
 #. Type: select
 #. Description
@@ -68,18 +80,3 @@ msgstr ""
 "gespeichert werden. Sie können dieses Verzeichnis entweder jetzt erstellen, "
 "oder diese Konfiguration später ändern, indem Sie die Variable VIDEO_DIR in /"
 "etc/default/vdr anpassen."
-
-#~ msgid "VDR needs DVB kernel modules"
-#~ msgstr "VDR benötigt DVB-Kernel-Module"
-
-#~ msgid ""
-#~ "VDR needs DVB (Digital Video Broadcasting) kernel modules. You may have "
-#~ "to separately install these modules. Ensure that the correct modules for "
-#~ "your DVB hardware get loaded automatically e.g. by adding them to /etc/"
-#~ "modules otherwise VDR won't work!"
-#~ msgstr ""
-#~ "VDR benötigt Kernel-Module für DVB (»Digital Video Broadcasting«). Sie "
-#~ "müssen diese Module separat installieren. Stellen Sie sicher, dass die "
-#~ "für Ihre DVB-Hardware richtigen Module automatisch geladen werden, indem "
-#~ "Sie sie z.B. in /etc/modules eintragen. Andernfalls wird VDR nicht "
-#~ "funktionieren."
