--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: vdr_1.2.6-3\n"
 "Report-Msgid-Bugs-To: vdr@packages.debian.org\n"
-"POT-Creation-Date: 2009-04-02 14:42+0200\n"
+"POT-Creation-Date: 2010-03-04 22:58+0100\n"
 "PO-Revision-Date: 2004-03-18 10:42+0100\n"
 "Last-Translator: Emmanuel le Chevoir <mms@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -27,8 +27,20 @@ msgstr ""
 #. Type: select
 #. Choices
 #: ../vdr.templates:1001
-msgid "Satellite, Terrestrial, Cable"
-msgstr "Satellite, Terrestre, Câble"
+msgid "Satellite"
+msgstr "Satellite"
+
+#. Type: select
+#. Choices
+#: ../vdr.templates:1001
+msgid "Terrestrial"
+msgstr "Terrestre"
+
+#. Type: select
+#. Choices
+#: ../vdr.templates:1001
+msgid "Cable"
+msgstr "Câble"
 
 #. Type: select
 #. Description
@@ -68,18 +80,3 @@ msgstr ""
 "video.00. Vous pouvez changer ce répertoire en modifiant la variable "
 "VIDEO_DIR dans le fichier /etc/default/vdr, ou créer ce répertoire "
 "maintenant."
-
-#~ msgid "VDR needs DVB kernel modules"
-#~ msgstr "VDR a besoin des modules DVB du noyau pour fonctionner"
-
-#~ msgid ""
-#~ "VDR needs DVB (Digital Video Broadcasting) kernel modules. You may have "
-#~ "to separately install these modules. Ensure that the correct modules for "
-#~ "your DVB hardware get loaded automatically e.g. by adding them to /etc/"
-#~ "modules otherwise VDR won't work!"
-#~ msgstr ""
-#~ "VDR a besoin des modules DVB (Digital Video Broadcasting) du noyau pour "
-#~ "fonctionner. Il est possible que vous ayez besoin d'installer ces modules "
-#~ "séparément. Assurez-vous que les modules correspondant à votre matériel "
-#~ "DVB sont chargés automatiquement (en les ajoutant dans le fichier /etc/"
-#~ "modules, par exemple), sans quoi VDR ne fonctionnera pas."
