--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: vdr\n"
 "Report-Msgid-Bugs-To: vdr@packages.debian.org\n"
-"POT-Creation-Date: 2009-04-02 14:42+0200\n"
+"POT-Creation-Date: 2010-03-04 22:58+0100\n"
 "PO-Revision-Date: 2008-05-20 23:07+0100\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -17,8 +17,20 @@ msgstr ""
 #. Type: select
 #. Choices
 #: ../vdr.templates:1001
-msgid "Satellite, Terrestrial, Cable"
-msgstr "Satélite, Terrestre, Cable"
+msgid "Satellite"
+msgstr "Satélite"
+
+#. Type: select
+#. Choices
+#: ../vdr.templates:1001
+msgid "Terrestrial"
+msgstr "Terrestre"
+
+#. Type: select
+#. Choices
+#: ../vdr.templates:1001
+msgid "Cable"
+msgstr "Cable"
 
 #. Type: select
 #. Description
@@ -57,17 +69,3 @@ msgstr ""
 "armacenar as gravacións. Pode crear este directorio agora, ou cambiar este "
 "comportamento máis adiante modificando a variable VIDEO_DIR en /etc/default/"
 "vdr."
-
-#~ msgid "VDR needs DVB kernel modules"
-#~ msgstr "VDR precisa dos módulos de TV dixital"
-
-#~ msgid ""
-#~ "VDR needs DVB (Digital Video Broadcasting) kernel modules. You may have "
-#~ "to separately install these modules. Ensure that the correct modules for "
-#~ "your DVB hardware get loaded automatically e.g. by adding them to /etc/"
-#~ "modules otherwise VDR won't work!"
-#~ msgstr ""
-#~ "VDR precisa dos módulos de TV dixital. Pode ter que instalar estes "
-#~ "módulos por separado. Asegúrese de que se carguen automaticamente os "
-#~ "módulos correctos para o seu hardware de TV dixital, por exemplo, "
-#~ "engadíndoos a /etc/modules. Se non o fai, VDR non ha funcionar."
