--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ vdr (1.6.0-17) unstable; urgency=low
 
   * Modified runvdr to also (re)load dvb modules not depending on dvb_core*
     (Closes: #576337)
+  * Added debian/source/format 1.0
 
  -- Tobias Grimm <etobi@debian.org>  Fri, 30 Apr 2010 22:43:50 +0200
 
