Standards-Version: 3.9.1 SVN: trunk@8708

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ vdr (1.6.0-18) unstable; urgency=low
   * Added Danish translation of the debconf templates (Thx to Joe Hansen)
     (Closes: #592260)
   * Minor fix to options parsing in debug version start script
+  * Standards-Version: 3.9.1
 
  -- Tobias Grimm <etobi@debian.org>  Thu, 19 Aug 2010 00:07:33 +0200
 
