--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vdr (1.6.0-19) unstable; urgency=low
+
+  * Fixed DEB_BUILD_OPTIONS export in in vdrdbg-buildpackage
+    (Closes: #596593)
+
+ -- Tobias Grimm <etobi@debian.org>  Sun, 17 Oct 2010 11:27:55 +0200
+
 vdr (1.6.0-18.1) unstable; urgency=low
 
   * debian/vdrleaktest
