--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+vdr (1.7.16-1) UNRELEASED; urgency=low
+
+  [ Thomas Günther, Tobias Grimm ]
+  * Updated to the latest upstream development version release
+  * Updated/Removed debian/patches/*
+  * Setting default SVDRP port to 6419 (this was already changed by upstrem)
+  * Added BIDI define to 81_Make_config.dpatch
+  * Added libfribidi-dev to Build-Depends
+  * Added Make.global to vdr-dev.install and 81_Make_config.dpatch
+  * Removed BUILDVDR define
+  * Added include links via debian/vdr-dev.links to make the include structure
+    compatible to vdr standards
+  * Removed 03_cmdsubmenu.dpatch (command submenus now integrated in upstream)
+  * Removed installation of the sky plugin
+  * Added installation of the dvbsddevice plugin
+  * Added option LIRC to /etc/default/vdr, which allows to change the LIRC device
+    or disabling it by setting it to /dev/null
+
+ -- Tobias Grimm <etobi@debian.org>  Sun, 28 Nov 2010 18:48:25 +0100
+
 vdr (1.6.0-19.1) unstable; urgency=low
 
   * debian/vdrleaktest
