--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ vdr (1.7.16-1) UNRELEASED; urgency=low
   * Removed installation of the sky plugin
   * Added installation of the dvbsddevice plugin
   * Suggest vdr-plugin-dvbsddevice
+  * Added NEWS entry about vdr-plugin-dvbsddevice and a probably required 
+    modified firmware
 
   [ Thomas Schmidt ]
   * Update Vcs-* fields: Move packaging from svn to git
