--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ vdr (1.7.16-1) UNRELEASED; urgency=low
   * Added NEWS entry about vdr-plugin-dvbsddevice and a probably required 
     modified firmware
   * Updated README.Debian
+  * Added 99_add-language-to-po.dpatch (Closes: #593925)
 
   [ Thomas Schmidt ]
   * Update Vcs-* fields: Move packaging from svn to git
