--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-vdr (1.7.16-1) UNRELEASED; urgency=low
+vdr (1.7.17-1) UNRELEASED; urgency=low
 
   [ Thomas Günther, Tobias Grimm ]
-  * Updated to the latest upstream development version release (Closes: #573896)
+  * Updated to the latest upstream development version release 1.7.17
+    (Closes: #573896)
   * Updated/Removed debian/patches/*
   * Setting default SVDRP port to 6419 (this was already changed by upstrem)
   * Added BIDI define to 81_Make_config.dpatch
@@ -29,7 +30,7 @@ vdr (1.7.16-1) UNRELEASED; urgency=low
   * Dropped conflicts to vdradmin
   * Dropped moving of channels.conf from /etc/vdr/ to /var/lib/vdr/
 
- -- Tobias Grimm <etobi@debian.org>  Sat, 01 Jan 2011 16:20:54 +0100
+ -- Tobias Grimm <etobi@debian.org>  Sat, 19 Mar 2011 21:10:15 +0100
 
 vdr (1.6.0-19.1) unstable; urgency=low
 
