--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-vdr (1.7.17-1) UNRELEASED; urgency=low
+vdr (1.7.17-1) unstable; urgency=low
 
   [ Thomas Günther, Tobias Grimm ]
   * Updated to the latest upstream development version release 1.7.17
@@ -31,7 +31,7 @@ vdr (1.7.17-1) UNRELEASED; urgency=low
   * Dropped moving of channels.conf from /etc/vdr/ to /var/lib/vdr/
   * Dropped marks reloading from jumpplay patch (Patch modified by Udo Richter)
 
- -- Tobias Grimm <etobi@debian.org>  Sun, 10 Apr 2011 11:58:03 +0200
+ -- Tobias Grimm <etobi@debian.org>  Sun, 10 Apr 2011 12:56:07 +0200
 
 vdr (1.6.0-19.1) unstable; urgency=low
 
