--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vdr (1.7.18-1) unstable; urgency=low
+
+  * New upstream release
+  * Dropped dvb-s2api-liplianin-headers dependency from vdr-dev
+
+ -- Tobias Grimm <etobi@debian.org>  Sun, 17 Apr 2011 17:39:15 +0200
+
 vdr (1.7.17-1) unstable; urgency=low
 
   [ Thomas Günther, Tobias Grimm ]
