--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ vdr (1.7.18-1) unstable; urgency=low
   * Disabled dvbhddevice until the driver from
     http://powarman.dyndns.org/hg/v4l-dvb-saa716x/ gets merged into the
     kernel
+  * Dropped 99_vdr-workaround-broken-sys-capability.dpatch
 
  -- Tobias Grimm <etobi@debian.org>  Sun, 17 Apr 2011 17:39:15 +0200
 
