--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ vdr (1.7.21-1) unstable; urgency=low
   * Updated opt-24_jumpplay.dpatch
   * Dropped opt-27_ttxtsubs.dpatch
   * Dropped opt-48-x_pin.dpatch
+  * Dropped opt-51_cuttime.dpatch
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 17 Sep 2011 21:34:41 +0200
 
