--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ vdr (1.7.21-1) unstable; urgency=low
   * Dropped opt-51_cuttime.dpatch
   * Dropped opt-52_hard_link_cutter.dpatch
   * New ABI version for 1.7.21
+  * chown +r on /proc/av7110_ir and /proc/budget_ci_ir
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 17 Sep 2011 21:34:41 +0200
 
