--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.22-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Tobias Grimm <etobi@debian.org>  Sat, 10 Dec 2011 21:51:31 +0100
+
 vdr (1.7.21-1) unstable; urgency=low
 
   * Dropped 99_fix-recording-problem-vdr-1.7.20.dpatch
