Dropped multipatch patches - these are available in the etobi-branch of the Git repository

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ vdr (1.7.22-1) unstable; urgency=low
 
   * New upstream release
   * Dropped 99_dvbc-unitiymedia-fix.dpatch - fixed upstream
+  * Dropped multipatch patches - these are available in the etobi-branch
+    of the Git repository
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 10 Dec 2011 21:51:31 +0100
 
