Dropped dpatch and use quilt for the patches - no PATCHVARIANT support anymore! To build VDR with a different set of patches, grab the appropriate branch from the Git.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ vdr (1.7.22-1) unstable; urgency=low
   * Dropped 99_dvbc-unitiymedia-fix.dpatch - fixed upstream
   * Dropped multipatch patches - these are available in the etobi-branch
     of the Git repository
+  * Dropped dpatch and use quilt for the patches - no PATCHVARIANT support
+    anymore! To build VDR with a different set of patches, grab the
+    appropriate branch from the Git.
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 10 Dec 2011 21:51:31 +0100
 
