Added build-arch, build-indep targets

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ vdr (1.7.22-1) unstable; urgency=low
   * Dropped dpatch and use quilt for the patches - no PATCHVARIANT support
     anymore! To build VDR with a different set of patches, grab the
     appropriate branch from the Git.
+  * Added build-arch, build-indep targets
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 10 Dec 2011 21:51:31 +0100
 
