--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Updated commands.ctvdr.conf to new upstream format
   * Added opt-52_hard_link_cutter.patch
   * Added opt-54_x_pin.patch
+  * Added opt-55_wareagleicon.patch
 
  -- Holger Schvestka <email address hidden>  Wed, 21 Dec 2011 15:49:04 +0200
 
