--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Added opt-52_hard_link_cutter.patch
   * Added opt-54_x_pin.patch
   * Added opt-55_wareagleicon.patch
+  * install scr.conf -> etc/vdr/ (unicable)
 
  -- Holger Schvestka <email address hidden>  Wed, 21 Dec 2011 15:49:04 +0200
 
