--- a/debian/changelog
+++ b/debian/changelog
@@ -19,13 +19,14 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Reordered debian/vdr.install
   * Dropped extensions patch
   * Updated commands.ctvdr.conf to new upstream format
+  * install scr.conf -> etc/vdr/ (unicable)
   * Added opt-52_hard_link_cutter.patch
   * Added opt-54_x_pin.patch
   * Added opt-55_wareagleicon.patch
-  * install scr.conf -> etc/vdr/ (unicable)
   * Added opt-56_eventdetails_v3.patch
+  * Added opt-57_vdr-remote_instant_recordings.patch
 
- -- Holger Schvestka <email address hidden>  Wed, 21 Dec 2011 16:49:04 +0200
+ -- Holger Schvestka <email address hidden>  Wed, 21 Dec 2011 17:33:04 +0200
 
 vdr (1.7.21-4yavdr0~oneiric) oneiric; urgency=medium
 
