--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,8 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Reordered debian/vdr.install
   * Dropped extensions patch
   * Updated commands.ctvdr.conf to new upstream format
+  [yaVDR]
   * install scr.conf -> etc/vdr/ (unicable)
-  * Added opt-52_hard_link_cutter.patch
   * Added opt-54_x_pin.patch
   * Added opt-55_wareagleicon.patch
   * Added opt-56_eventdetails_v3.patch
@@ -29,8 +29,12 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Added opt-59_hd-timeshift-wait.patch
   * Added opt-60-livebuffer12-rmm.patch
   * Updated opt-42-x_MainMenuHooks.patch -> v.1.0.1
+  * Added opt-61_dynamite.patch
+  * Added opt-62_hard_link_cutter.patch
+  * Added opt-99_vdr-hotfixes.patch
+  * Removed sortrec.patch
 
- -- Holger Schvestka <email address hidden>  Wed, 21 Dec 2011 17:33:04 +0200
+ -- Holger Schvestka <email address hidden>  Fri, 23 Dec 2011 14:30:04 +0200
 
 vdr (1.7.21-4yavdr0~oneiric) oneiric; urgency=medium
 
