--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Added opt-62_hard_link_cutter.patch
   * Added opt-99_vdr-hotfixes.patch
   * Added opt-63_naludump.patch
+  * Added opt-64_dvbt2-support.patch
   * Removed sortrec.patch
 
  -- Holger Schvestka <email address hidden>  Fri, 23 Dec 2011 14:30:04 +0200
