--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
+vdr (1.7.22-0yavdr0~precise) precise; urgency=medium
   
   [Tobi]
   * New upstream release
@@ -21,7 +21,6 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Updated commands.ctvdr.conf to new upstream format
   [yaVDR]
   * install scr.conf -> etc/vdr/ (unicable)
-  * Added opt-54_x_pin.patch
   * Added opt-55_wareagleicon.patch
   * Added opt-56_eventdetails_v3.patch
   * Added opt-57_vdr-remote_instant_recordings.patch
@@ -34,9 +33,10 @@ vdr (1.7.22-0yavdr0~oneiric) oneiric; urgency=medium
   * Added opt-99_vdr-hotfixes.patch
   * Added opt-63_naludump.patch
   * Added opt-64_dvbt2-support.patch
+  * Added opt-65_pin.patch
   * Removed sortrec.patch
 
- -- Holger Schvestka <email address hidden>  Fri, 23 Dec 2011 14:30:04 +0200
+ -- Holger Schvestka <email address hidden>  Sat, 24 Dec 2011 00:40:04 +0200
 
 vdr (1.7.21-4yavdr0~oneiric) oneiric; urgency=medium
 
