--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.22-1yavdr2~precise) precise; urgency=medium
+
+  * Added xprmtl-01_externalci.patch
+
+ -- Lars Hanisch <email address hidden>  Thu, 29 Dec 2011 18:06:00 +0200
+
 vdr (1.7.22-1yavdr1~precise) precise; urgency=medium
   
   [Tobi]
