--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.23-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Tobias Grimm <etobi@debian.org>  Sun, 15 Jan 2012 20:50:20 +0100
+
 vdr (1.7.22-1) unstable; urgency=low
 
   * New upstream release
