--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ vdr (1.7.23-1) unstable; urgency=low
   * 17_epg_channel_name_width.patch
     Show more of the channel names in the EPG now/next listings.
     Without this, I see 'BBC ON', BBC TW', 'ITV1', 'Channe', 'Channe' etc.
+  * Enabled parallel build.
 
- -- Tobias Grimm <etobi@debian.org>  Tue, 24 Jan 2012 22:17:29 +0000
+ -- Tobias Grimm <etobi@debian.org>  Wed, 25 Jan 2012 00:37:52 +0000
 
 vdr (1.7.22-1) unstable; urgency=low
 
