--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 vdr (1.7.23-1) unstable; urgency=low
 
   * New upstream release
-  * Build-depend on linux-libc-dev (>= 2.6.39) (DVB driver API >= 5.3 required now!)
+  * Build-depend on linux-libc-dev (>= 3.0) (DVB driver API >= 5.3 required
+    now, which was introduced in Linux 3.0-rc!)
 
   [Darren Salt]
   * 17_epg_channel_name_width.patch
