--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
 vdr (1.7.23-0yavdr0~precise) precise; urgency=medium
-
+  
+  [Tobi]
+  * Enabled parallel build.
   * New upstream release
   [yaVDR]
   * Dropped opt-99_vdr-hotfixes.patch
 
- -- Holger Schvestka <email address hidden>  Wed, 18 Jan 2012 22:20:04 +0200
+ -- Holger Schvestka <email address hidden>  Tue, 31 Jan 2012 13:56:04 +0200
 
 vdr (1.7.22-1yavdr2~precise) precise; urgency=medium
 
