--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.24-0yavdr0~precise) precise; urgency=medium
+  
+  * New upstream release
+
+ -- Holger Schvestka <email address hidden>  Mon, 20 Feb 2012 15:20:04 +0200
+
 vdr (1.7.23-0yavdr0~precise) precise; urgency=medium
   
   [Tobi]
