--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
 vdr (1.7.24-1) unstable; urgency=low
 
   * New upstream release
-  * Added 01-upstream-fix.patch - a minor patch from Klaus Schmidinger
+  * Added 01-upstream-fix1.patch - a minor patch from Klaus Schmidinger
+  * Added 02-upstream-fix2.patch - reverts some problematic changes in the
+    upstream release
 
  -- Tobias Grimm <etobi@debian.org>  Sun, 19 Feb 2012 17:21:08 +0100
 
