--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ vdr (1.7.24-1) unstable; urgency=low
   * Added 01-upstream-fix1.patch - a minor patch from Klaus Schmidinger
   * Added 02-upstream-fix2.patch - reverts some problematic changes in the
     upstream release
+  * Install scr.conf (Satellite Channel Routing) to /etc/vdr/ (Closes: #660729)
 
  -- Tobias Grimm <etobi@debian.org>  Sun, 19 Feb 2012 17:21:08 +0100
 
