--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ vdr (1.7.24-1) unstable; urgency=low
   * Added 02-upstream-fix2.patch - reverts some problematic changes in the
     upstream release
   * Install scr.conf (Satellite Channel Routing) to /etc/vdr/ (Closes: #660729)
+  * Updated debianize-vdrplugin to use the debhelper V7 format
 
  -- Tobias Grimm <etobi@debian.org>  Sun, 19 Feb 2012 17:21:08 +0100
 
