--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ vdr (1.7.26-1yavdr1~precise) precise; urgency=medium
   [Tobi]
   * Updated debianize-vdrplugin to use the debhelper V7 format
   * Dropped opt-39_noepg.patch
+  * Temporarily disabled opt-38_disableDoubleEpgEntrys.patch
+  * Temporarily disabled opt-56_eventdetails_v3.patch
+  * Removed vdr-1.7.24-dvbplayer-revert.patch
+  * Removed vdr-1.7.24-hotfix-1.patch
 
  -- Holger Schvestka <email address hidden>  Sun, 11 Mar 2012 15:05:04 +0200
 
