--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ vdr (1.7.26-1yavdr1~precise) precise; urgency=medium
   * New upstream release
   [Tobi]
   * Updated debianize-vdrplugin to use the debhelper V7 format
+  [yaVDR]
   * Dropped opt-39_noepg.patch
   * Temporarily disabled opt-38_disableDoubleEpgEntrys.patch
   * Temporarily disabled opt-56_eventdetails_v3.patch
