New upstream release
* Dropped Added 01-upstream-fix1.patch
* Dropped Added 02-upstream-fix2.patch

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vdr (1.7.26-1) unstable; urgency=low
+
+  * New upstream release
+  * Dropped Added 01-upstream-fix1.patch
+  * Dropped Added 02-upstream-fix2.patch
+
+ -- Tobias Grimm <etobi@debian.org>  Sun, 11 Mar 2012 10:37:07 +0100
+
 vdr (1.7.24-1) unstable; urgency=low
 
   * New upstream release
