--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 vdr (1.7.26-1) unstable; urgency=low
 
-  * New upstream release
+  * New upstream release (Closes: #659646)
   * Dropped Added 01-upstream-fix1.patch
   * Dropped Added 02-upstream-fix2.patch
   * Standards-Version: 3.9.3
