--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.27-2) unstable; urgency=low
+
+  * Fixed issue with fontconfig 2.9 (Closes: #671223)
+
+ -- Tobias Grimm <etobi@debian.org>  Thu, 03 May 2012 19:33:19 +0200
+
 vdr (1.7.27-1) unstable; urgency=low
 
   * New upstream release
