--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.28-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Tobias Grimm <etobi@debian.org>  Wed, 06 Jun 2012 17:57:29 +0200
+
 vdr (1.7.27-2) unstable; urgency=low
 
   * Fixed issue with fontconfig 2.9 (Closes: #671223)
